infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: vbox.test
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000 
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name:  vbox-srv
                port:
                  number: 3000
          - path:  /api/movies/?(.*)
            pathType: Prefix
            backend:
              service:
                name:  movies-srv
                port:
                  number: 3000
